Changes in Version 1.0.2

  o  ...

Changes in Version 1.0.1

  o  Place vignette source, R-code, and PDF (optimized for viewing) files in the ./inst/doc folder.

Changes in Version 1.0.0

  o  Respond to Model Archive data release review comments.

  o  Add report number to documentation.

Changes in Version 0.8.1

  o  Move remote repository location from https://github.com/jfisher-usgs/wrv to https://github.com/USGS-R/wrv

  o  Add BSD license for the .ReduceAmp function.

Changes in Version 0.8.0

  o  Reorganize model archive to comply with new open data requirements.

  o  Remove suggested git2r R-package, version control is no longer used when constructing the model archive.

  o  Add USGS software disclaimer to the package startup message.

  o  Fix bug that prevented package compilation on R version 3.3.0.

  o  Address editorial review comments in package vignettes.

Changes in Version 0.7.2

  o  Change LaTeX bibliography engine from natbib to biblatex.

Changes in Version 0.7.1

  o  Fix bug with scientific-notation format of axis-tickmark labels in the PlotGraph function.

  o  Calculate the relative composite sensitivity in the sensitivity dataset.

Changes in Version 0.7.0

  o  Vignettes ready for editorial review.

  o  Update PEST sensitivity dataset with results from final model calibration run.

Changes in Version 0.6.4

  o  All colleague review comments pertaining to package vignettes have been addressed.

  o  Fix bug in PlotMap function that was introduced with sp version 1.2-2.
     Function sp::gridlines now returns the correct ID attribute order for labels "EW" and "NS".

  o  Change default value for auto.flow.reduce argument in the WriteModflowInput function to FALSE.

Changes in Version 0.6.3

  o  For sampling purposes the BumpRiverStage function requires a random number generator (RNG).
     The RNG state is now set using the set.seed function and results are reproducible.

  o  Add make.intervals argument to the PlotMap function.
